# csc578BA1

./: CMakeLists.txt
A1/: CMakeLists.txt  README.txt
A1/include/: CMakeLists.txt  ObjectGenerator.h  Spring.hpp  SpringScene.hpp  angularSpring.hpp
A1/shaders/: CMakeLists.txt  Spring.vs.glsl  angularSpring.fs.glsl  angularSpring.vs.glsl
A1/source/: CMakeLists.txt  Main.cpp  ObjectGenerator.cpp  Spring.cpp  SpringScene.cpp  angularSpring.cpp
Cloth/: CMakeLists.txt  README.txt
Cloth/include/: Axis.h  CMakeLists.txt  Cloth.hpp  ClothCamera.hpp  ClothScene.hpp  Grid.hpp  ObjectGenerator.h  Particle.hpp  QuatCamera.h  ShapeData.h  Spline.h  SplineManager.hpp  SplinePoint.h  Spring.hpp  Triangle.hpp
Cloth/shaders/: Axis.fs.glsl  Axis.vs.glsl  CMakeLists.txt  Cloth.fs.glsl  Cloth.vs.glsl  spline.vs.glsl
Cloth/source/: Axis.cpp  Ball.cpp  CMakeLists.txt  Cloth.cpp  ClothCamera.cpp  ClothScene.cpp  Grid.cpp  ObjectGenerator.cpp  Particle.cpp  QuatCamera.cpp  Spline.cpp  SplineManager.cpp  Spring.cpp  Triangle.cpp  main.cpp
